merge by chlee