@@ -1,26 +1,9 @@
 package com.jinjin.jintranet.commuting.service;
 
-import java.sql.Array;
-import java.time.Duration;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-
-import javax.transaction.Transactional;
-
 import com.jinjin.jintranet.commuting.dto.CommuteRequestDTO;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.jpa.repository.Query;
-import org.springframework.stereotype.Service;
-
-
 import com.jinjin.jintranet.commuting.dto.CommuteRequestInsertDTO;
 import com.jinjin.jintranet.commuting.dto.CommutingsInterface;
+import com.jinjin.jintranet.commuting.repository.CommutingDslRepository;
 import com.jinjin.jintranet.commuting.repository.CommutingRepository;
 import com.jinjin.jintranet.commuting.repository.CommutingRequestRepository;
 import com.jinjin.jintranet.member.repository.MemberRepository;
@@ -31,6 +14,17 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import javax.transaction.Transactional;
+import java.time.Duration;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.HashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -39,7 +33,9 @@ public class CommutingService {
 	private final MemberRepository memberRepository;
 	
 	private final CommutingRepository commutingRepository;
-	
+
+	private final CommutingDslRepository commutingDslRepository;
+
 	private final CommutingRequestRepository commutingRequestRepository;
 
 	@Transactional
@@ -62,9 +58,9 @@ public class CommutingService {
 	@Transactional
 	public Map<String, Object> getWorkTime(Member member) {
 		Map<String, Object> map = new HashMap<>();
-		map.put("goToWorkTime", commutingRepository.goToWorkTime(member));
-		map.put("offToWorkTime", commutingRepository.offToWorkTime(member));
-		map.put("workingStatus", commutingRepository.workingStatus(member));
+		map.put("goToWorkTime", commutingDslRepository.goToWorkTime(member));
+		map.put("offToWorkTime", commutingDslRepository.offToWorkTime(member));
+		map.put("workingStatus", commutingDslRepository.workingStatus(member));
 		return map;
 	}
 
@@ -118,8 +114,7 @@ public class CommutingService {
 
 		//연관관계 편의성 메소드
 		//member.add(commutingRequest);
-		//member.getCommutingRequests().add(commutingRequest);
-		//member.setCommutingRequests(member.getCommutingRequests());
+
 	}
 
 	@Transactional
@@ -135,13 +130,12 @@ public class CommutingService {
 
 		for(Integer i : overtimeDates) {
 			List<LocalDateTime> dayOfTime
-					= commute.stream()
-					.filter(c -> c.getCnt() ==1)
-					.filter(d -> d.getCommutingTm().getDayOfMonth() == i ).map(m -> m.getCommutingTm()).toList();
+					= commute.stream().filter(c -> c.getCnt() == 1).filter(c -> (c.getCommutingTm().getDayOfMonth() == i && !c.getAttendYn().equals("V")) ||
+					(c.getCommutingTm().minusDays(1).getDayOfMonth() == i && c.getAttendYn().equals("V"))).map(CommutingsInterface::getCommutingTm).collect(Collectors.toList());
 
 			if(dayOfTime.size() < 2) continue;
 
-			Duration diff = Duration.between(dayOfTime.get(0).toLocalTime(), dayOfTime.get(1).toLocalTime());
+			Duration diff = Duration.between(dayOfTime.get(0), dayOfTime.get(1));
 			if(diff.toHours() > 10)  {
 				CommuteRequestDTO ctoFlake = new CommuteRequestDTO();
 				ctoFlake.setRequestDt(LocalDate.of(year , month , i).toString());
